--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <main class="principal">
             <form class="cabecalho">
                 <label for="campeao">tell me your champ</label>
-                <input type="text" id="campeao" class="input-padrao" required placeholder="Aatrox">
+                <input type="text" id="campeao" class="input-padrao" required placeholder="Riven">
+
+                <input type="submit" value="search" class="search">
             </form>
 
             <div class="opcoes">
